# dge

./: .gitignore  Makefile  README.md  pyproject.toml
demos/: man_v_bear_sim.py
scripts/: man_v_bear_demo.py
src/dge/: __init__.py  engine.py  game_loggers.py  registry.py  renderer.py
src/dge/ecs/: __init__.py  component.py  ecs.py  entity.py  registry.py  system.py
src/dge/ecs/component/: __init__.py  component.py  sprite.py  transform.py
src/dge/ecs/entity/: __init__.py  entity.py  entity_manager.py
src/dge/ecs/utils/: constants.py
src/dge/engine/: engine.py
src/dge/systems/: __init__.py  components.py  physics.py  render.py
src/dge/systems/notification/: alert.py  event.py  trigger.py
