[project]
name = "dge"
version = "0.1.0"
description = "A simple python game engine"
authors = [
    {name = "Daniel", email = "daniel.templeman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "dge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
